# SmartHome

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  skills-lock.json
.claude/skills/mijia-ir/: SKILL.md
.github/workflows/: docs.yml
.skills/: preferences.yaml
docs/: getting-started.md  index.md
docs/concepts/: account-region.md  auth-token.md  local-vs-cloud.md  login-troubleshooting.md  matter.md
docs/control/: cli.md  ir.md  mcp.md
docs/ecosystem/: apple-home.md  google-home.md  open-source-homekit.md
docs/reference/: devices.md  hardware-notes.md  links.md
docs/solutions/: home-assistant.md  index.md  mijiapilot.md  point-to-point.md
tools/: mi_tokens.py
