[project]
name = "SmartHome-docs"
version = "0.0.0"
description = "Docs build environment for Smart Home 米家整合筆記"
requires-python = ">=3.11"

[project.optional-dependencies]
docs = [
    # Cap mkdocs/mkdocs-material below the next major: MkDocs 2.0 removes the
    # plugin system entirely (no llmstxt / static-i18n / copy-to-llm under 2.x).
    # See references/mkdocs-2-and-zensical.md for the full rationale and
    # criteria for lifting these caps.
    "mkdocs>=1.6,<2",
    "mkdocs-material>=9.5,<10",
    # Uncomment when you add a non-default language via add-language.sh
    # (the script un-comments this line automatically on first run):
    # "mkdocs-static-i18n>=1.2",
    "mkdocs-llmstxt>=0.2",
    "mkdocs-copy-to-llm>=0.1",
    "pymdown-extensions>=10.7",
]

# 各控制情境（scenario）的相依分組。用 `uv sync --group <name>` 安裝，或
# `uv run --group <name> <cmd>` 臨時執行；彼此獨立、可只裝需要的那組。
# 例：uv run --group miio miiocli cloud
[dependency-groups]
# 本地控制 / 抓 token：python-miio 的 miiocli（先用這組登入試試）
miio = [
    "python-miio",   # miiocli：本地 miIO 控制
    "micloud",       # miiocli cloud 登入、抓 device token 用
]
# 雲端 MCP server：給 Claude / Agent 直接控制
mcp = [
    "miot-mcp",
]
# 雲端 SDK：mijiaAPI（MijiaPilot 的基礎）
mijia = [
    "mijiaAPI",
]
# 抽 device token（官方雲、支援 tw/sg）：自製 tools/mi_tokens.py 用；
# 鏡像 Xiaomi-cloud-tokens-extractor 的 requirements.txt
tokens = [
    "requests",
    "pycryptodome",
    "charset-normalizer",
    "Pillow",
    "colorama",
    "qrcode",
]
